mod 2: doja fish fix security issues pmd